Add trend to output folder

--- a/prep/bd/hab/v2020/rainforest_trend.Rmd
+++ b/prep/bd/hab/v2020/rainforest_trend.Rmd
@@ -273,6 +273,9 @@ rainforest_trend <- data.frame(
   year = 2019,
   trend = trend
 )
+
+# Save trend to output folder
+write_csv(rainforest_trend, file.path(dir_goal, "output/rainforest_trend.csv"))
 ```
 
 
