--- a/prep/cw/v2020/soil_contamination_trend.Rmd
+++ b/prep/cw/v2020/soil_contamination_trend.Rmd
@@ -201,14 +201,62 @@ contam_refs <- contaminant %>%
 
 ## Calculate Status
 
-The current status for soil contamination will be found by dividing the observed concentration by the reference point for each contaminant at each site. The EPA states that any contamination level under twice the TEL or Eco-SSL doesn't warrant further study under the Comprehensive Environmental Response, Compensation, and Liability Act (https://semspub.epa.gov/work/HQ/175229.pdf). We will designate the status for any contaminant below twice the TEL or Eco-SSL as 0.
+The current status for soil contamination will be found by dividing the observed concentration by the reference point for each contaminant at each site. Values are rescaled 0-1 using two orders of magnitude as the upper limit. Any value exceeding two orders of magnitude, or 100x over the threshold is assigned a value of 1.  
+
+A status is then found for each contaminant in each year by averaging all the site scores. An overall status score is found for each year by averaging the status score for each of the 9 contaminants. This gives higher scores to higher levels of contamination. This will be used for the soil contamination pressure layer. The CW status score will be the inverse, found by 1 - status.   
 
 ```{r calc-status, eval=F}
 
 # Find status score for each contaminant at each site 
 site_status <- contam_refs %>% 
   mutate(s_status = conc / ref_level) %>% 
-  dplyr::select(site, year, soil_type, contam, s_status, geometry)
+  mutate(s_status_resc = ifelse(s_status > 100, 1, s_status/100)) %>% 
+  dplyr::select(site, year, soil_type, contam, s_status = s_status_resc, geometry)
+
+# Find average status for each contaminant 
+contam_status <- site_status %>% 
+  group_by(contam, year) %>% 
+  summarize(c_status = mean(s_status))
+
+# Find overall status for each year 
+status <- contam_status %>% 
+  group_by(year) %>% 
+  summarize(status = 1 - mean(c_status)) %>% 
+  mutate(region_id = 1) %>% 
+  dplyr::select(region_id, year, status)
+
+# Save as dataframe 
+sc_status <- as.data.frame(status) %>% 
+  dplyr::select(-geometry)
+
+# Save to output folder
+write_csv(sc_status, file.path(dir_goal, "output/sc_status.csv"))
+```
+
+## Save to Toolbox 
+
+```{r save-to-toolbox}
+write_csv(sc_status, file.path(dir_scores, "layers/cw_contamination_status.csv"))
+```
+
+## Pressure Layer
+
+### Calculate Pressure Layer
+
+Soil contamination will also be a pressure layer where higher scores indicate more contamination. This is the inverse of the status score calculated above.  
+
+```{r debris-pressure-layer, eval=F}
+sc_status <- read_csv(file.path(dir_goal, "output/sc_status.csv"))
+
+pressure <- sc_status %>% 
+  mutate(pressure_score = 1 - status) %>% 
+  dplyr::select(-status)
+```
+
+### Save Pressure to Toolbox 
+
+```{r save-prs-toolbox, eval=F}
 
 ```
+
 
